@@ -1,6 +1,7 @@
 xz-utils (4.999.9beta+20091002-2) experimental; urgency=low
 
   * debian/changelog.upstream.sh: Declare local variables.
+  * debian/rules: Use ":=" where appropriate
 
  -- Jonathan Nieder <jrnieder@gmail.com>  Tue, 06 Oct 2009 11:21:18 -0500
 
